--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@types/socket.io": "^2.1.12",
+    "object-sizeof": "^1.6.1",
     "prom-client": "^13.0.0",
     "socket.io": "^3.1.0"
   }
